# daobidao

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  README.en.md  README.md  README.zh-CN.md  build.sh  build_deb.sh  config.yaml  config_manager.py  hotkey.py  input_method.py  install.sh  main.py  model_state.py  pyproject.toml  recorder.py  settings_server.py  setup.sh  stt_doubao.py  stt_sensevoice.py  version.py
.claude/: format-after-edit.sh  settings.json
.github/ISSUE_TEMPLATE/: bug.md  feat.md  spike.md
.github/workflows/: build.yml  release.yml
assets/: generate_icon.py
backends/: autostart_macos.py
debian/: control  postinst  prerm  setup_window.py  whisper-input.sh
docs/: BACKLOG.md  DEVTREE.md
docs/0-语音输入工具初始实现/: PLAN.md  PROMPT.md  SUMMARY.md
docs/1-流式识别/: PLAN.md  PROMPT.md  SUMMARY.md
docs/13-目录重构/: PLAN.md  PROMPT.md  SUMMARY.md
docs/14-PyPI分发/: PLAN.md  PROMPT.md  SUMMARY.md
docs/15-单元测试/: PLAN.md  PROMPT.md  (+1 more)
launcher/: .gitignore
macos/: setup_window.py
scripts/: build.sh  dev_reinstall.sh  generate_icon.py  generate_whisper_mel_golden.py  hatch_build.py  run_macos.sh  setup.sh  setup_linux.sh  setup_macos.sh  spike_qwen3_onnx.py  spike_qwen3_streaming.py
shim/whisper-input/: README.md  pyproject.toml
shim/whisper-input/src/whisper_input/: __init__.py  __main__.py
tests/: conftest.py  spike_modelscope_cancel.py  test_autostart_linux.py  test_autostart_macos.py  test_config_manager.py  test_dispatchers.py  test_download_manager.py  test_hotkey_combo.py  test_i18n.py  test_input_method.py  test_logger.py  test_main_preload_fallback.py  test_main_shutdown.py  test_main_streaming.py  test_main_stt_switch.py  test_main_worker.py  test_postprocess.py  test_qwen3_asr.py  test_qwen3_downloader.py  test_qwen3_feature.py  test_qwen3_postprocess.py  test_qwen3_prompt.py  test_qwen3_runner.py  test_qwen3_stream.py  test_qwen3_stream_smoke.py  test_qwen3_tokenizer.py  test_recorder_probe.py  test_recorder_streaming.py  test_sense_voice.py  test_settings_server.py  test_settings_server_models.py  test_stt_factory.py  test_updater.py  test_version.py
(+115 files in other folders)
